//https://developers.google.com/protocol-buffers/docs/proto3

syntax = "proto3";

option csharp_namespace = "HiarcGRPC";

package HiarcGRPC;

service HiarcService {
  rpc InitDatabase (InitDatabaseRequest) returns (InitDatabaseResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message InitDatabaseRequest {
}

message InitDatabaseResponse {
  Result result = 1;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  Result result = 1;
  User user = 2;
}

message User {
  string key = 1;
  string name = 2;
  string description = 3;
}

message Result {
  bool success = 1;
  string message = 2;
}
